--- a/commande/src/main/resources/application.properties
+++ b/commande/src/main/resources/application.properties
@@ -37,7 +37,6 @@ spring.datasource.password=sa
 #spring.datasource.password=ipi
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-
 # Web :
 
 spring.mvc.format.date=iso
@@ -58,3 +57,6 @@ spring.web.resources.static-locations=classpath:/META-INF/resources/, classpath:
 
 # désactiver le cache pour toujours rafraichir en cours de développement
 spring.thymeleaf.cache=false
+
+# application.properties :
+spring.data.rest.base-path=/api/data-rest
